# ChargeVideo

./: .gitignore  .gitmodules  CMakeLists.txt  ChargeVideoConfig.cmake.in  LICENSE  README.md
.cache/clangd/index/: ChargeVideo.hpp.FC737CB2F79F6A46.idx  Time.cpp.42E9C9CF672FA4BC.idx  Video.cpp.8ED47A0C1A7736F5.idx
src/: ChargeVideo.hpp  Manager.cpp  Time.cpp  Video.cpp  VideoProcessing.cpp
